--- a/prototype2.1/my-venv/source/processing.ipynb
+++ b/prototype2.1/my-venv/source/processing.ipynb
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1271,7 +1271,7 @@
     "\n",
     "for item in outputArray:\n",
     "    f.write(str(item))\n",
-    "    f.write(\",\")\n",
+    "    f.write(\",\\n\")\n",
     "\n",
     "f.close()"
    ]
